2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Kill more useless parens
	* src/console.cc,
	* src/ubinder.cc,
	* src/ucommand.cc,
	* src/ufunction.cc,
	* src/uobject.cc,
	* src/uqueue.cc,
	* src/ustring.cc,
	* src/ustring.hh,
	* src/uvalue.cc,
	* src/uvariable.cc: Remove useless parens.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	update externals
	* Makefile.am (ACLOCAL_AMFLAGS, SVN_EXTERNALS): Add sdk.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	Simplify UBinder
	* src/ubinder.hh, src/ubinder.cc: Use C++ style ctors.
	(id): A UString, not a pointer.
	(monitors_type): New, use it.
	Change almost all signatures to pass const UString& instead of
	UString*.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/parser/bison/ugrammar.y: here.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	Fix LIBERATE
	* src/utypes.hh: Restore the original test.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Fix deep_clear issues
	* src/ucallid.cc: Swap mem initializers to silent a warning.
	* src/ueventcompound.cc, src/ueventhandler.cc: Fix/clean the
	uses of deep_clear.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	use libport::deep_clear
	* src/ubinder.cc, src/ubinder.hh, src/ucommand.cc,
	* src/uconnection.cc, src/ueventcompound.cc, src/ueventhandler.cc,
	* src/ueventinstance.cc, src/ueventmatch.cc, src/uobj.cc,
	* src/uobject.cc, src/userver.cc:
	here.
	And run restyle.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Formatting changes
	* src/uatcandidate.cc: here.
	Shorten scopes.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Clean UCallid
	* src/ucallid.hh, src/ucallid.cc (fun_id, self_id): Be real
	UString instead of pointers.
	(stack, fun_id, self_id, root): Private.
	Formatting changes.
	Use libport::deep_clear.
	Modernize ctor.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Formatting changes
	* src/ucommand.cc: Here.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Formatting changes